--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pi-play",
-  "version": "1.0.0-beta.0",
+  "name": "@apeiwan/pi-play",
+  "version": "1.0.0-beta1",
   "description": "",
   "main": "lib/pi-play.js",
   "style": "lib/index.css",
